# YouTubeRAG-Backend

./: .dockerignore  .env.example  .gcloudignore  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  README.md  app.yaml  cloudbuild.yaml  deps.json  pyproject.toml  supabase_schema.sql  test_api.py  utils_cli.py
app/: main.py
app/models/: chat_model.py  video_models.py
app/routes/: chat.py  router.py  video.py
app/services/: chat_service.py  embedding_service.py  embeddings_service.py  rag_service.py  summary_service.py  youtube_service.py
app/utils/: embedding_client.py  supabase_client.py
